# practice_gtest_and_ci

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-cd.yml
src/: Calculator.cpp  Calculator.h
test/: test_calculator.cpp
